k8s/loki.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: loki
  namespace: monitoring-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: loki
  template:
    metadata:
      labels:
        app: loki
    spec:
      containers:
      - name: loki
        image: grafana/loki:latest
        ports:
        - containerPort: 3100
---
apiVersion: v1
kind: Service
metadata:
  name: loki-service
  namespace: monitoring-app
spec:
  type: ClusterIP
  selector:
    app: loki
  ports:
    - protocol: TCP
      port: 3100
      targetPort: 3100
