k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cloud-monitoring-service
  namespace: monitoring-app
spec:
  # Using NodePort to easily access it via Minikube
  type: NodePort
  selector:
    app: cloud-monitoring
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
      nodePort: 30000
