k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cloud-monitoring-ingress
  namespace: monitoring-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: "letsencrypt-staging"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - cloud-monitor.local
    secretName: cloud-monitor-tls
  rules:
  - host: cloud-monitor.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: cloud-monitoring-service
            port:
              number: 8000
